--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "karma-chrome-launcher": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
     "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.1.5",
+    "karma-jasmine": "^0.2.1",
     "karma-coffee-preprocessor": "~0.1.2",
     "requirejs": "~2.1.10",
     "karma-requirejs": "~0.2.1",
