--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "karma-phantomjs-launcher": "~0.1.1",
     "karma": "~0.10.9",
     "grunt-karma": "~0.6.2",
-    "grunt-contrib-jshint": "~0.8.0"
+    "grunt-contrib-jshint": "~0.8.0",
+    "bower": "^1.3.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-html2js": "^0.2.4"
   }
 }
