--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-jshint": "~0.8.0",
     "bower": "^1.3.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-html2js": "^0.2.4"
+    "grunt-html2js": "^0.2.4",
+    "grunt-contrib-copy": "^0.5.0"
   }
 }
