--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,10 @@
     "tests"
   ],
   "dependencies": {
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "angular": "~1.2.24"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.16"
+    "angular-mocks": "~1.2.24"
   }
 }
