--- a/package.json
+++ b/package.json
@@ -6,22 +6,17 @@
   "author": "Michael Bromley",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "karma-script-launcher": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "^0.2.1",
-    "karma-coffee-preprocessor": "~0.1.2",
-    "requirejs": "~2.1.10",
-    "karma-requirejs": "~0.2.1",
-    "karma-phantomjs-launcher": "~0.1.1",
-    "karma": "~0.10.9",
-    "grunt-karma": "~0.6.2",
-    "grunt-contrib-jshint": "~0.8.0",
     "bower": "^1.3.1",
+    "grunt": "~0.4.2",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-html2js": "^0.2.4",
-    "grunt-contrib-copy": "^0.5.0"
+    "grunt-karma": "~0.9.0",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.2.2",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "requirejs": "~2.1.10"
   }
 }
