--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Michael Bromley",
   "license": "MIT",
   "devDependencies": {
+    "karma": "~0.12.0",
     "bower": "^1.3.1",
     "grunt": "~0.4.2",
     "grunt-contrib-copy": "^0.5.0",
